@@ -135,6 +135,12 @@
 
 #define VERMSG "GNU nano " VERSION
 
+/* If we don't have regex support, turn the color support off, as it
+ * depends on the use of regexes. */
+#ifndef HAVE_REGEX_H
+#undef ENABLE_COLOR 
+#endif
+
 /* If we aren't using ncurses, turn the mouse support off, as it's
  * ncurses-specific. */
 #ifndef NCURSES_MOUSE_VERSION
